# apsh-3

./: .gitignore  README.md  School.drawio  pyproject.toml
01_variables/: 01_variables.ipynb  01_variables_answerkey.ipynb  01_variables_tasks.ipynb
02_conditions/: 02_conditions.ipynb  02_conditions_answerkey.ipynb  02_conditions_tasks.ipynb
03_loops/: 03_loops.ipynb  03_loops_answerkey.ipynb
04_containers/: 04_containers.ipynb  04_containers_answerkey.ipynb  04_containers_tasks.ipynb
05_files/: 05_files.ipynb  05_files_answerkey.ipynb  05_files_tasks.ipynb
05_files/data/: data1.csv  data2.csv  galaxies.csv  observations.csv
06_functions/: 06_functions.ipynb  06_functions_answerkey.ipynb  06_functions_tasks.ipynb
06_functions/data/: star1.csv  star2.csv  star3.csv
07_local_modules/: 07_local_modules.ipynb  07_local_modules_tasks.ipynb  colors.py  strings.py
07_local_modules/answerkey/: converters.py
08_modules/: 08_modules.ipynb  08_modules_answerkey.ipynb  08_modules_tasks.ipynb
1_variables/: 1_variables.ipynb
interschool/01/: block_diagram.md  design_block.md  draw_io.md  graph_block.md
interschool/01/graph_block/: examples.ipynb
school/01/01_variables/: 01_variables.ipynb
school/01/02_conditions/: 02_conditions_answerkey.ipynb
school/01/03_loops/: 03_loops_tasks.ipynb
school/01/07_local_modules/: 07_local_modules.ipynb
school/01/08_modules/: 08_modules.ipynb  08_modules_tasks.ipynb
school/02/01_numpy/: 01_numpy.ipynb  01_numpy_answerkey.ipynb
school/02/02_matplotlib/: 02_matplotlib.ipynb  02_matplotlib_answerkey.ipynb  (+1 more)
(+11 files in other folders)
