[project]
name = "apsh-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "astroquery>=0.4.11",
    "ipykernel>=6.29.5",
    "ipympl>=0.10.0",
    "lightkurve>=2.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "photutils>=2.3.0",
    "pyqt6>=6.10.2",
]
